<resources>
    <string name="app_name">Stylish</string>
    <string name="home">" "</string>
    <string name="catalog"> </string>
    <string name="cart"> </string>
    <string name="profile"> </string>
    <string name="catalogTitle">型錄</string>
    <string name="cartTitle">購物車</string>
    <string name="profileTitle">個人</string>
    <string name="productTitle1">厚實毛呢格子外套</string>
    <string name="productDetail1">高抗寒素材選用，保暖也時尚有型</string>
    <string name="productTitle2">羊毛粗織長版毛衣</string>
    <string name="productDetail2">保暖又不厚重，輕柔質感新美學</string>
    <string name="productTitle3">霧面框框牛皮帶</string>
    <string name="productDetail3">精選霧面金屬框，展現百變造型風格</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name">樹懶君</string>
    <string name="cumulativeAmount">累計消費 NT$91800</string>
    <string name="myOrder">我的訂單</string>
    <string name="moreService">更多服務</string>
    <string name="seeAll">查看全部</string>
    <string name="awaitingPayment">待付款</string>
    <string name="awaitingShipment">待出貨</string>
    <string name="shipped">待簽收</string>
    <string name="awaitingReview">待評價</string>
    <string name="exchange">退換貨</string>
    <string name="starred">收藏</string>
    <string name="notification">貨到通知</string>
    <string name="refunded">帳戶退款</string>
    <string name="addressed">地址</string>
    <string name="customerService">客服訊息</string>
    <string name="systemFeedback">系統回饋</string>
    <string name="registerCellphone">手機綁定</string>
    <string name="settings">設定</string>
    <string name="awaitingPaymentComingSoon">待付款 COMING SOON</string>
    <string name="awaitingShipmentComingSoon">待出貨 COMING SOON</string>
    <string name="shippedComingSoon">待簽收 COMING SOON</string>
    <string name="awaitingReviewComingSoon">待評價 COMING SOON</string>
    <string name="exchangeComingSoon">退換貨 COMING SOON</string>
    <string name="starredComingSoon">收藏 COMING SOON</string>
    <string name="notificationComingSoon">貨到通知 COMING SOON</string>
    <string name="refundedComingSoon">帳戶退款 COMING SOON</string>
    <string name="addressedComingSoon">地址 COMING SOON</string>
    <string name="customerServiceComingSoon">客服訊息 COMING SOON</string>
    <string name="systemFeedbackComingSoon">系統回饋 COMING SOON</string>
    <string name="registerCellphoneComingSoon">手機綁定 COMING SOON</string>
    <string name="settingsComingSoon">設定 COMING SOON</string>

    <string name="facebook_app_id">289104688422937</string>
    <string name="fb_login_protocol_scheme">fb289104688422937</string>
    <string name="logInDialogTitle">請先登入會員</string>
    <string name="logInDialogContent">登入會員後即可使用個人功能。</string>
    <string name="logInButtonText">Facebook登入</string>
    <string name="addSuccessfully">加入成功</string>
    <string name="userName">Loading...</string>

    <string name="catalogWomenApparel">女裝</string>
    <string name="catalogMenApparel">男裝</string>
    <string name="catalogAccessory">配件</string>
    <string name="AddIntoCart">加入購物車</string>
    <string name="productDetailColor">顏色</string>
    <string name="productDetailSize">尺寸</string>
    <string name="productDetailStock">庫存</string>
    <string name="productDetailMaterial">材質</string>
    <string name="productDetailWash">洗滌</string>
    <string name="productDetailPlace">產地</string>
    <string name="productDetailNote">備註</string>
    <string name="productDetailColorSelect">選擇顏色</string>
    <string name="productDetailSizeSelect">選擇尺寸</string>
    <string name="productDetailQuantitySelect">選擇數量</string>
    <string name="productDetailErrorMessage">庫存不足</string>

    <string name="cartGoToPay">前往結帳</string>
    <string name="cartRemove">移除</string>
    <string name="productDetailShowStock">庫存：</string>
    <string name="productInCart">結帳商品</string>
    <string name="recipientInformation">收件資訊</string>
    <string name="recipientName">收件人姓名</string>
    <string name="recipientNameInput">收件人姓名</string>
    <string name="recipientEmailInput">收件人Email</string>
    <string name="recipientPhoneNumberInput">收件人電話</string>
    <string name="PhoneNumberExample">例：0912345678</string>
    <string name="recipientAddress">收件人地址</string>
    <string name="arriveTimeSelection">配送時間</string>
    <string name="arriveTimeMoring">08:00-12:00</string>
    <string name="arriveTimeAfternoon">14:00-18:00</string>
    <string name="arriveTimeAnytime">不指定</string>
    <string name="choosePaymentMethod">付款詳情</string>
    <string name="payOnDelivery">貨到付款</string>
    <string name="cardPayment">信用卡付款</string>

</resources>
