<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/home"
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_pressed"
        android:orderInCategory="1"/>
    <item
        android:title="@string/catalog"
        android:id="@+id/navigation_catalog"
        android:icon="@drawable/catalog_pressed"
        android:orderInCategory="2"/>
    <item
        android:title="@string/cart"
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart_pressed"
        android:orderInCategory="3"/>
    <item
        android:title="@string/profile"
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_pressed"
        android:orderInCategory="4"/>
</menu>